correct cards + overflow on span of outline button

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -107,6 +107,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        overflow: hidden;
       }
     }
 
